# ros2-learnings

./: .gitignore  README.md  bashrc_config.md  basic_commands.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/my_robot_controller/share/my_robot_controller/: package.sh
install/robot_tutorial/share/robot_tutorial/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/tutorial/share/tutorial/: package.bash  package.zsh
log/: latest_build  latest_list
roadmap/: build.md  roadmap.html  roadmap.md  roadmap_builder.md  robotics_path.md
roadmap/areas/: areas.md
src/my_opencv_demo/: CMakeLists.txt  package.xml
src/my_opencv_demo/src/: minimal_opencv_ros2_node.cpp
src/my_robot_controller/: CMakeLists.txt  package.xml  setup.py
src/my_robot_controller/my_robot_controller/: my_first_node.py
src/robot_tutorial/: CMakeLists.txt  package.xml  robot_tutorialConfig.cmake.in  robot_tutorialConfigVersion.cmake.in
src/tutorial/: CMakeLists.txt  package.xml  tutorialConfig.cmake.in  tutorialConfigVersion.cmake.in
